💄 🐛 Fix text overflow on small screens with the project desc.

--- a/frontend/styles/Projects.css
+++ b/frontend/styles/Projects.css
@@ -27,6 +27,7 @@
 }
 
 .projectsBottom {
+    overflow-y: scroll;
     padding: 0 0.5vw;
 }
 
